# NuoYa_SDK

./: README.md  test.py
.marscode/: deviceInfo.json
examples/: CMakeLists.txt  main.cpp  nuoyaSDK.h  readme.md
nuoya_sdk/: CMakeLists.txt  main.cpp  nuoyaSDK.c  nuoyaSDK.h
